<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_spacing"
            android:text="@string/activity_user_books_title"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_spacing"
            android:text="@string/description_title"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_spacing"
            android:text="@string/activity_user_books_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_spacing"
            android:text="@string/action_title"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:id="@+id/b_now_playing_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_spacing"
            android:text="@string/activity_user_books_button_now_playing_title" />

        <Button
            android:id="@+id/b_user_book_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_user_books_button_list_item" />

        <Button
            android:id="@+id/b_discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_spacing"
            android:text="@string/activity_user_books_button_discover" />

    </LinearLayout>

</ScrollView>